kubernetes/apps/main/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: minecraft
  annotations:
    lbipam.cilium.io/ips: "10.69.50.65"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: minecraft
  ports:
    - name: minecraft
      port: 25565
      protocol: TCP
      targetPort: minecraft
